// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render correctly Select 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select "
  >
    <select
      className="field__output"
      id="mockId"
      onChange={[Function]}
      onSelectOption={[Function]}
      value=""
    >
      <option
        value=""
      >
        placeholder
      </option>
      <option
        value="Value1"
      >
        Value1
      </option>
      <option
        value="Value2"
      >
        Value2
      </option>
      <option
        value="Value3"
      >
        Value3
      </option>
    </select>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="[object Object]_0"
        onClick={[Function]}
      >
        placeholder
      </li>
      <li
        data-type="list-item"
        key="[object Object]_1"
        onClick={[Function]}
      >
        Value1
      </li>
      <li
        data-type="list-item"
        key="[object Object]_2"
        onClick={[Function]}
      >
        Value2
      </li>
      <li
        data-type="list-item"
        key="[object Object]_3"
        onClick={[Function]}
      >
        Value3
      </li>
    </ul>
  </div>
  <label
    className="input-wrapper__label"
    htmlFor="mockId"
  />
</div>
`;

exports[`<Select /> should render correctly Select with focus state 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select input-wrapper__field--focused"
  >
    <select
      className="field__output"
      id="mockId"
      onChange={[Function]}
      onSelectOption={[Function]}
      value=""
    >
      <option
        value=""
      >
        placeholder
      </option>
      <option
        value="Value1"
      >
        Value1
      </option>
      <option
        value="Value2"
      >
        Value2
      </option>
      <option
        value="Value3"
      >
        Value3
      </option>
    </select>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="[object Object]_0"
        onClick={[Function]}
      >
        placeholder
      </li>
      <li
        data-type="list-item"
        key="[object Object]_1"
        onClick={[Function]}
      >
        Value1
      </li>
      <li
        data-type="list-item"
        key="[object Object]_2"
        onClick={[Function]}
      >
        Value2
      </li>
      <li
        data-type="list-item"
        key="[object Object]_3"
        onClick={[Function]}
      >
        Value3
      </li>
    </ul>
  </div>
  <label
    className="input-wrapper__label"
    htmlFor="mockId"
  />
</div>
`;

exports[`<Select /> should render correctly Select with selected value in state 1`] = `
<div
  className="input-wrapper input-wrapper--select"
>
  <div
    className="input-wrapper__field input-wrapper__field--select "
  >
    <select
      className="field__output"
      id="mockId"
      onChange={[Function]}
      onSelectOption={[Function]}
      value="Value1"
    >
      <option
        value=""
      >
        placeholder
      </option>
      <option
        value="Value1"
      >
        Value1
      </option>
      <option
        value="Value2"
      >
        Value2
      </option>
      <option
        value="Value3"
      >
        Value3
      </option>
    </select>
    <ul
      className="input-wrapper__select-list"
      data-amount={3}
    >
      <li
        data-type="list-item"
        key="[object Object]_0"
        onClick={[Function]}
      >
        placeholder
      </li>
      <li
        data-type="list-item"
        key="[object Object]_1"
        onClick={[Function]}
      >
        Value1
      </li>
      <li
        data-type="list-item"
        key="[object Object]_2"
        onClick={[Function]}
      >
        Value2
      </li>
      <li
        data-type="list-item"
        key="[object Object]_3"
        onClick={[Function]}
      >
        Value3
      </li>
    </ul>
  </div>
  <label
    className="input-wrapper__label"
    htmlFor="mockId"
  />
</div>
`;
